--- a/css/screen.css
+++ b/css/screen.css
@@ -28,6 +28,9 @@ html {
     font-family: "droid-serif", serif;
     color: #5c6366;
     padding: 48px 24px 24px;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
