--- a/css/screen.css
+++ b/css/screen.css
@@ -27,14 +27,18 @@ html {
     line-height: 1.5;
     font-family: "droid-serif", serif;
     color: #5c6366;
-    padding: 48px 24px 24px;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after{
+    box-sizing: inherit;
 }
 
 body {
-    max-width: 42em;
+
     margin: 0 auto;
 }
 
@@ -125,19 +129,6 @@ li ol {
     margin-bottom: 0;
 }
 
-blockquote {
-    font-style: italic;
-    font-size: 23px;
-    line-height: 32px;
-    margin: 0 0 24px;
-    font-family: "Times New Roman", serif;
-}
-
-blockquote * {
-    font-size: inherit;
-    line-height: inherit;
-}
-
 figcaption {
     font-size: 12px;
     line-height: 16px;
@@ -167,18 +158,50 @@ a:focus {
     color: #00e6a1;
 }
 
+@media (min-width: 768px){
+    h1{
+      font-size: 46px;  
+    }
+}
+
+@media (min-width: 992px) {
+    h1{
+        font-size: 52px;  
+      }
+}
+
+@media (min-width: 1200px) {
+    h1{
+        font-size: 58px;
+    }
+}
+
+/*
+    Components: Quote
+*/
+.c-quote{
+    font-family: "droid-serif", serif;
+    font-style: italic;
+    font-size: 23px;
+    line-height: 32px;
+
+    background-color: #F2FAF8;
+    color: #00B37D;
+
+    padding: 24px;
+    padding-right: 22px;
+    margin: 48px 0px;
+
+    border-radius: 5px;
+}
+
 /*
     Components: Author
 */
 .c-author{
     display: flex;
     align-items: center;
-}
-
-.c-author__image{
-    width: 56px;
-    height: 56px;
-    border-radius: 100%;
+    margin-bottom: 24px;
 }
 
 .c-author__name, .c-author__title{
@@ -189,6 +212,7 @@ a:focus {
     font-size: 14px;
     font-family: "Inter Web", "Helvetica Neue", Helvetica, arial, sans-serif;
     line-height: 24px;
+    color: #5c6366;
 }
 
 .c-author__name{
@@ -203,21 +227,78 @@ a:focus {
     margin-right: 16px;
 }
 
+/*
+    Components: Atricle
+*/
+
+.c-article__date{
+    margin: 0;
+    font-size: 14px;
+}
+
+.c-article__header, .c-article__body{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.c-article__header{
+    padding: 24px 24px 0;
+}
+
+.c-article__body{
+    padding: 0 24px;
+}
+
+@media (min-width: 768px){
+    .c-article__header{
+        padding: 48px 48px 24px;
+    }
+    .c-article__author{
+        margin-bottom: 48px;
+    }
+    .c-article__body{
+        padding: 24px 48px;
+    }
+}
+
+@media (min-width: 992px){
+    .c-article__body{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .c-article__author{
+        width: 25%;
+        padding-right: 24px;
+    }
+    .c-article__content{
+        width: 75%;
+    }
+
+    .c-author{
+        display: block;
+    }
+    .c-author__image{
+        margin-bottom: 16px;
+    }
+}
+
+/*
+    Utilities: max-width
+    ---
+    Utility classes to put specific max widths onto elements.
+*/
+    .u-max-width-sm{
+        max-width: 36em;
+    }
+
+
 /* Small devices (landscape phones, 576px and up) */
 
 @media (min-width: 576px) {}
 
 /* Medium devices (tablets, 768px and up) */
 
-@media (min-width: 768px) {
-    html {
-        padding: 48px 48px 24px;
-    }
-    h1 {
-        font-size: 58px;
-        line-height: 64px;
-    }
-}
+@media (min-width: 768px) {}
 
 /* Large devices (landscape tablets, desktops, 992px and up) */
 
